# Sales-Data-Aggregation-Pipeline

./: .dockerignore  .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile-airflow  LICENSE  README.md  TESTING_ANALYSIS.md  config_templates.py  demo_config_validator.py  docker-compose-cloud.yml  docker-compose.yml  export_tf_vars.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup_doctor.py  test_connections_simple.py
.github/workflows/: dbt_testing.yml  main.yml
airflow/dags/: analytics_dag.py  batch_processing_dag.py  cloud_sales_pipeline_dag.py  kafka_connector_monitor_dag.py  maintenance_dag.py  pipeline_monitoring_dag.py  sales_data_pipeline_dag.py  streaming_processing_dag.py
config/: __init__.py  environments.yaml  logging.yaml
data/: africa_orders.csv  canada_orders.csv  caribbean_orders.csv  central_asia_orders.csv  central_orders.csv  east_orders.csv  emea_orders.csv  north_asia_orders.csv  north_orders.csv  oceania_orders.csv  south_orders.csv  southeast_asia_orders.csv  west_orders.csv
data/raw/: all_orders_raw.parquet
dbt/: README.md  dbt_project.yml  packages.yml  profiles.yml.example  requirements-test.txt  requirements.txt
dbt/analyses/: diagnose_business_rules.sql  diagnostic_queries.sql
dbt/macros/: audit_columns.sql  data_quality.sql  generate_schema_name.sql  generic_tests.sql  get_surrogate_key.sql  performance_tests.sql
dbt/tests/: __init__.py  conftest.py
deploy/snowflake/: README.md  setup_delta_direct.py
deploy/streaming/: deploy_connector.sh  docker-compose-connect.yml  kafka-connect-s3-sink.json  manage_connector.sh  run_producer.sh  (+1 more)
deployment/: deploy.sh
docker/: Dockerfile.dbt  Dockerfile.spark
docs/: PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md
infra/: main.tf  outputs.tf  providers.tf  variables.tf
legacy/: README.md
notebooks/: Sales_ETL_Databricks.py
requirements/: base.txt  cloud.txt  core.txt  dev.txt  spark.txt  streaming.txt  test.txt  validation.txt
scripts/: run_comprehensive_tests.py  run_pipeline.sh  setup-databricks-secrets.sh
snowflake/: 01_database_setup.sql  02_raw_tables.sql  03_dimensional_tables.sql  04_fact_tables.sql  README.md  requirements.txt  setup_snowflake.py  snowflake_connection_config.json
spark/: README.md  requirements.txt  run_tests.py  sales_batch_job.py  test_commands.sh  test_config.py  test_data_quality.py  test_error_handling.py  test_integration.py  test_performance.py  test_sales_etl_job.py  test_spark_job.py
src/: __init__.py  config.py  create_tables.py  dimensions.py  extract.py  load.py  transform.py
streaming/: README.md  deploy_connector.sh  kafka_producer.py  manage_connector.sh  producer_config.json  requirements.txt  snowflake_connector.json  snowflake_connector_password.json  test_producer.py
tableau/: README.md
tests/: README_KAFKA_PRODUCER_TESTS.md  conftest.py  conftest_spark.py  pytest.ini  pytest_spark.ini  run_kafka_producer_tests.py  simple_test_demo.py  spark_test_commands.sh  test_aws_connection.py  test_config_validator.py  test_databricks_connection.py  test_kafka_producer.py  test_kafka_producer_demo.py  test_producer.py  test_service_readiness.py  test_simple_demo.py  test_snowflake_connection.py  test_transform.py  validate_test_setup.py
tools/: __init__.py  check_ownership.py  cleanup_tests_schema.py  update_test_auth.py
(+219 files in other folders)
